# GitTools

./: .gitattributes  .gitignore  CMakeLists.txt  GitLog.desktop  GitTools.pro  README.md  mainpage.dox  resources.qrc
GitCore/: CMakeLists.txt  GitCoreResources.qrc
GitCore/GitTools/: CommitInfo.h  CommitRefsModel.cpp  CommitRefsModel.h  DiffModel.h  ExceptionTooltip.h  GitApplication.cpp  GitApplication.h  GitCommitFiles.cpp  GitLogDelegate.h  GitLogModel.cpp  GitLogModel.h  GraphItem.h  QuickDialog.cpp  QuickDialog.h
GitCore/qml/: GitTheme.qml  LineInput.qml  MultiLineInput.qml
GitDiff/: CMakeLists.txt  GitDiff.cpp  GitDiff.h  GitDiffResources.qrc  LineModel.cpp  LineModel.h  main.cpp
GitDiff/qml/: GitDiff.qml
GitDiff/tmp/: left.txt  right.txt
GitLog/: CMakeLists.txt  CommitDialog.cpp  CommitDialog.h  CommitDialog.ui  CreateBranchDialog.cpp  CreateBranchDialog.h  CreateBranchDialog.ui  DBusInterface.cpp  DBusInterface.h  DeleteBranchDialog.h  DeleteBranchDialog.ui  ExceptionTooltip.h  GitCommitInfo.h  GitLog.pro  GitLog.qrc  LogWindow.cpp  LogWindow.h  LogWindow.ui  QGitLogDelegate.cpp  QGitLogDelegate.h  gitcommitfiles.cpp  gitcommitfiles.h  gitdiffprocess.cpp  gitdiffprocess.h  gitlogmodel.cpp  gitlogmodel.h  gitlogview.cpp  gitlogview.h  logwindow.cpp  logwindow.h  logwindow.ui  main.cpp  qtquickcontrols2.conf
GitLog/qml/: CommitDialog.qml  DiffArea.qml  DiffPage.qml  GitLog.qml  LogView.qml  MainWindow.qml  TreeViewPage.qml
QGit/: QGit.pro
QGit/src/: qgitref.cpp  qgitref.h  qgitrepository.cpp  qgitrepository.h  qgittree.cpp  qgittree.h
gtcore/: CMakeLists.txt  gtcore.pro
gtcore/GitTools/: CommitInfo.h  CreateBranchDialog.h  CreateBranchDialog.ui  DeleteBranchDialog.h  DiffModel.cpp  DiffModel.h  ExceptionTooltip.ui  GitCommitFiles.cpp  GitCommitFiles.h  GitDiffProcess.cpp  GitDiffProcess.h  GitLogDelegate.cpp  GitLogDelegate.h  GitLogModel.cpp  GitLogModel.h  GraphItem.cpp  base.h  string.h
libgt/: libgt.pro
libgt/GitTools/: base.h  exception.h  string.h
